--- a/contactme.html
+++ b/contactme.html
@@ -104,7 +104,7 @@
       };
   
       try {
-        const response = await fetch('https://contact-form-backend-ycs7.onrender.com', {
+        const response = await fetch('https://contact-form-backend-ycs7.onrender.com/send', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(formData)
