--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <h3>We have a lot of experience handling any issue for you!</h3>
     </div>
 
-    <div class="container image-questions-grid">
+    <div class="container image-questions-grid2">
       <div class="image-card">
         <img src="trees.jpg" alt="Trees">
         <p>Is your land full of trees? Potholes?</p>
