--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="hero-content">
       <h1>SELL US YOUR LAND</h1>
       <p>THE LEADING REAL ESTATE COMPANY FOR LAND TRANSACTIONS</p>
-      <a href="about.html" class="btn-primary">Learn More</a>
+      <a href="#info" class="btn-primary">Learn More</a>
     
       <div class="contact-links">
         <a href="tel:2394453525" class="phone-link">
