--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <main class="container">
 
       <!-- Why Work With Us -->
-  <section class="info">
+  <section class="info" id="info">
     <div class="container">
       <h2>Why Work With Us?</h2>
       <div class="info-flex">
